<resources>
    <string name="app_name">Capstone</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Capstone</string>
    <string name="logo">Logo</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="email_hint">user@aicare.com</string>
    <string name="password">Password</string>
    <string name="dont_hv_acc">Don\'t have an Account ? Register</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="hv_acc">Have an Account ? Login</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="image">Image</string>
    <string name="camera_x">Camera X</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="failed_take_picture">Failed to Take Picture</string>
    <string name="failed_open_camera">Failed to Open Camera</string>
    <string name="doesnt_get_permission">Doesn\'t Get Permission</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="select_image">Please Select Image First</string>
    <string name="camera">Camera</string>
    <string name="login_sucess">Login Success</string>
    <string name="name">Name</string>
    <string name="testemail">admin@admin.com</string>
    <string name="history">History</string>
    <string name="aicare">AiCare</string>
    <string name="logout">Logout</string>

</resources>